--- a/Links.Rmd
+++ b/Links.Rmd
@@ -1,14 +1,6 @@
 ---
 title: "Resources"
-output: 
-  rmarkdown::html_vignette:
-    css: [style.css, vignette.css]
-    toc: true
-vignette: >
-  %\VignetteIndexEntry{Using the table1 Package to Create HTML Tables of Descriptive Statistics}
-  %\VignetteEngine{knitr::rmarkdown}
-  %\VignetteDepends{boot,MatchIt}
-  %\VignetteEncoding{UTF-8}
+output: html_document
 ---
 
 ```{r setup}
